# My-antipanic-bot

./: .cursorignore  .cursorrules  .env.example  .flake8  .gitignore  API_TESTING.md  CRITICAL_ISSUES_AUDIT.md  DEPLOY_NOW.txt  MYPY_CHEATSHEET.md  PHASE_5.2_COMPLETE.md  Procfile  QUICK_DEPLOY.md  RAILWAY_TMA_DEPLOY.md  STAGE_4.3_SUMMARY.md  TESTING_DOUBLE_CLICK.md  VERCEL_DEPLOY_GUIDE.md  env.example  kill bot  mypy.ini  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  run_api.py  test_phase_5_3.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: AGENTS.md  AIOGRAM_RULES.md  BACKLOG.md  BUGS_2025-12-17.md  CLAUDE.md  CORE_REDUCTION_PLAN.md  CRON_SETUP.md  MYPY_GUIDE.md  OPENAI_RULES.md  RAILWAY_DEPLOY.md  README.md  TMA_MIGRATION_PLAN.md  TMA_PROGRESS.md  TMA_SETUP.md  TORTOISE_RULES.md  TYPE_SAFETY_IMPROVEMENTS.md  product.md  tech.md
plans/: 000-template.md  001-mvp-foundation.md  002-quiz-onboarding.md  003-claude-migration.md  004-adaptive-autonomy.md  README.md  TMA_INTEGRATION_PLAN.md
scripts/: __init__.py  migrate_data.py  validate_data.py
src/: config.py  main.py
tests/: TESTING_RESULTS.md  conftest.py  test_api.py  test_cancel_and_fallback.py  test_create_goal_flow.py  test_database_schema.py  test_e2e_flows.py  test_error_middleware.py  test_evening.py  test_flows.py  test_formatters.py  test_goal_selection_fsm.py  test_morning.py  test_quiz.py  test_session.py  test_stuck_flow_logic.py
tma-frontend/: README.md  next.config.js  nixpacks.toml  package.json  railway.json  tailwind.config.ts
(+129 files in other folders)
